1.3.0.0/README.md
# LockEngine(旧版 v1.3.0.0)
### 适用于Win10及以上的锁屏壁纸引擎工具
### 作者：[Bilibili - 个人隐思](https://space.bilibili.com/1081364881 "来我主页玩玩ヾ(^∀^)ﾉ")
### 爱发电主页：[ThinkAlone](https://afdian.com/a/X1415 "您赞助的每一分都是我前进的动力")
编程不易，打赏随意：

<img src="../images/afdian-ThinkAlone.jpg" height="300" /> <img src="../images/mm_reward.png" height="300" />
## 更新记录
- 1.3.0.0(2025.10.6)
  - 新增了隐藏托盘功能，用户可以选择永久隐藏托盘，以腾出宝贵的任务栏空间
  - 优化了配置文件操作，使得缺失的配置项可以自动补齐
  - 优化了去除黑边逻辑，防止因视频信息获取错误导致除0崩溃，或许可以解决部分视频播放黑屏的问题
- 1.2.1.0(2025.9.24)
  - 修复了一个逆天bug，息屏功能之前只对交流电接入时起效，现已修复
- 1.2.0.0(2025.9.20)
  - 正式版，基本实现稳定的视频效果

## 功能特点
- 不修改系统文件，退出即恢复
- 使用开源libVLC 3.0.19
- 自适应锁屏尺寸，拒绝四周黑边
- 伪随机播放，不重不漏
- 独创独立息屏控制(beta)，可以自由控制锁屏界面的息屏时间，仅修改锁屏界面，退出即恢复

## 使用方法：
首次使用会**自动生成Config.ini和PlayList文件夹**。只需简单设置并把待播放视频放入PlayList中，刷新播放列表后即可使用。息屏超时时间可在Config.ini内修改，单位是秒，默认时间为一分钟

程序默认会创建一个系统托盘，以方便设置管理。菜单也提供了**永久关闭托盘**的选项，为用户腾出宝贵的任务栏空间，随后用户可以从配置文件恢复。只不过这么做会使得退出程序比较麻烦，必须进入任务管理器结束进程。因此提供了<ins>再次运行主程序退出</ins>的操作。

## 原理：
通过查找锁屏界面的背景图层窗口LockScreenBackstopFrame的Backstop Window的句柄，控制其透明化，并在桌面生成一个顶层窗口用于播放视频

## 视频介绍
[\[首发\]适用于Win10及以上的动态锁屏壁纸引擎软件](https://www.bilibili.com/video/BV1shJQzQELF/)

# 祝你使用愉快:P
